--- a/Tyler.html
+++ b/Tyler.html
@@ -118,7 +118,7 @@ small {
     </ul>
 <h1>Tyler's restaurant</h1>
 <h2>A Carribbean Eatery</h2>
-<div id="Food">
+<div id="Food"></div>
 
 <script>
   $('div').on('click', function() {
